[package]
name = "leptos-material"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
chrono = "0.4.38"
web-sys = { version = "0.3.69", features = [
	"ScrollIntoViewOptions",
	"ScrollLogicalPosition",
	"HtmlElement",
	"HtmlDivElement",
] }
leptos = "0.6.12"
leptos_meta = "0.6.12"

[features]
elevation = []
checkbox = []
textfield = []
icon = []
button = []
iconbutton = []
progress = []
datepicker = ["elevation"]
select = []
card = ["elevation"]
chips = []
full = [
	"checkbox",
	"textfield",
	"button",
	"icon",
	"iconbutton",
	"card",
	"elevation",
	"progress",
	"datepicker",
	"select",
	"chips",
]
default = ["full"]
