[package]
name = "leptos-material"
description = "A Leptos component wrapper for Material Web Components."
repository = "https://github.com/jordi-star/leptos-material"
readme = "README.md"
keywords = ["leptos", "material", "design", "components", "ui"]
categories = ["api-bindings", "wasm", "web-programming", "gui"]
version = "0.5.0"
edition = "2021"
license = "MIT"

[dependencies]
chrono = "0.4.38"
web-sys = { version = "0.3.69", features = [
	"ScrollIntoViewOptions",
	"ScrollLogicalPosition",
	"HtmlElement",
	"HtmlDivElement",
] }
leptos = "0.6.12"
leptos_meta = "0.6.12"

[features]
elevation = []
checkbox = []
textfield = []
icon = []
button = []
iconbutton = []
progress = []
datepicker = ["elevation"]
select = []
card = ["elevation"]
chips = []
full = [
	"checkbox",
	"textfield",
	"button",
	"icon",
	"iconbutton",
	"card",
	"elevation",
	"progress",
	"datepicker",
	"select",
	"chips",
]
default = ["full"]
